// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<code
  class="yozora-inline-code custom-class"
  style="color:orange"
>
  const message = "Hello, world!"
</code>
`;

exports[`snapshot default 1`] = `
<code
  class="yozora-inline-code"
  style="color:orange;font-size:16px"
>
  const message = "Hello, world!"
</code>
`;
